--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
+:root {
+  --white-transparent: rgba(255, 255, 255, 0.5);
+  font-family: 'Inter', sans-serif;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+}
+
+body {
+}
+
+.nb-container {
+  background-color: var(--white-transparent);
+  padding: 24px;
+  display: flex;
+}
+
+.nb-container li { 
+  list-style-type: none;
+  list-style: none;
+  color: black;
+  padding: 24px 24px 24px 24px;
+}
+
+.nb-container li:hover {
+  background-color: turquoise;
+}
+
+.about-sec {
+  padding: 40px 20px;
+  margin-bottom: 40px;
+  background-color: black;
 }
