--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,8 @@
   box-sizing: border-box;
 }
 
+/* elements */
+
 body {
   background-color: darkslateblue;
   overflow: auto;
@@ -20,6 +22,8 @@ body {
 h1 {
   word-break: nowrap;
 }
+
+/* navbar component */
 
 .nb-sec {
   position: fixed;
@@ -71,32 +75,7 @@ h1 {
   text-decoration: none;
 }
 
-.about-sec {
-  padding: 40px 40px;
-  margin: 125px;
-  background-color: black;
-  color: yellow;
-  border: black solid 1px;
-  border-radius: 25px;
-}
-
-.skill-sec {
-  padding: 40px 40px;
-  margin: 125px;
-  background-color: turquoise;
-  color: black;
-  border: black solid 1px;
-  border-radius: 25px;
-}
-
-.project-sec {
-  padding: 40px 40px;
-  margin: 125px;
-  background-color: black;
-  color: yellow;
-  border: black solid 1px;
-  border-radius: 25px;
-}
+/* front page component */
 
 .front-sec {
   padding-top: 250px;
@@ -116,37 +95,39 @@ h1 {
   display: flex;
 }
 
-.square {
-  width: 50px;
-  height: 50px;
-  background-color: pink;
+/* about component */
+
+.about-sec {
+  padding: 40px 40px;
+  margin: 125px;
+  background-color: black;
+  color: yellow;
+  border-radius: 25px;
+}
+
+.about-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 24px;
+  gap: 25px;
+}
+
+/* skills component */
+
+.skill-sec {
+  padding: 40px 40px;
+  background-color: turquoise;
+  color: black;
   border: black solid 1px;
-  margin: 20px;
-}
-
-.arrow {
-  width: 50px;
-  height: 50px;
-  background-color: pink;
-  border: black solid 1px;
-  margin: 20px;
-}
-
-.nav-links { 
-  background-color: red;
-  display: block;
-}
-
-.pixel-art {
-  background-color: yellow;
-  image-rendering: pixelated;
-  width: 50px;
 }
 
 .skill-icons {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: black;
-  flex-wrap: wrap;
   margin: 20px;
 }
 
@@ -154,19 +135,42 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: darkslateblue;
 }
 
 #frameworks {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: darkslateblue;
 }
 
-#tools {
+#envir {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: darkslateblue;
 }
+
+/* project component */
+
+.project-sec {
+  padding: 40px 40px;
+  background-color: darkslateblue;
+  color: red;
+}
+
+.repo {
+  background-color: greenyellow;
+  margin: 100px;
+  padding: 40px;
+}
+
+.project-link {
+
+}
+
+/* media query elements */
 
 #util-buttons {
   display: flex;
@@ -191,6 +195,12 @@ h1 {
   align-items: center;
 }
 
+/* contact component */
+
+
+
+/* media queries */
+
 @media screen and (max-width: 1100px) {
   .nb-sec ul {
     gap: 10px;
@@ -213,4 +223,28 @@ h1 {
     font-size: 45px;
   }
 
+}
+
+/* other */
+
+.square {
+  width: 50px;
+  height: 50px;
+  background-color: pink;
+  border: black solid 1px;
+  margin: 20px;
+}
+
+.arrow {
+  width: 50px;
+  height: 50px;
+  background-color: pink;
+  border: black solid 1px;
+  margin: 20px;
+}
+
+.pixel-art {
+  background-color: yellow;
+  image-rendering: pixelated;
+  width: 50px;
 }
