--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 @import "tailwindcss";
+
+/* IDEA: THE THEME OF WEBSITE SHOULD BE FISHING CATS PIXEL ART */
 
 :root {
   --white-transparent: rgba(255, 255, 255, 0.5);
-  font-family: 'Inter', sans-serif;
-  color: black;
 }
 
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 /* elements */
 
 body {
-  background-color: darkslateblue;
   overflow: auto;
+  font-family: 'EB Garamond', 'Inter', sans-serif;
+  background: turquoise;
 }
 
 h1 {
@@ -97,20 +100,23 @@ h1 {
 
 /* about component */
 
-.about-sec {
-  padding: 40px 40px;
-  margin: 125px;
-  background-color: black;
+.about-section {
+  background-color: orange;
   color: yellow;
-  border-radius: 25px;
+  border: greenyellow solid 5px;
+}
+
+#about-title {
+  font-size: 50px;
+  text-align: center;
 }
 
 .about-content {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 24px;
   gap: 25px;
+  background-color: black;
 }
 
 /* skills component */
@@ -119,7 +125,16 @@ h1 {
   padding: 40px 40px;
   background-color: turquoise;
   color: black;
-  border: black solid 1px;
+  border: red solid 5px;
+}
+
+#skill-title {
+  font-size: 50px;
+  text-align: center;
+}
+
+#skill-small-title {
+  font-size: 25px;
 }
 
 .skill-icons {
@@ -131,8 +146,14 @@ h1 {
   margin: 20px;
 }
 
+.skill-icons img {
+  padding: 8px;
+}
+
 #languages {
   display: flex;
+  flex-wrap: wrap;
+  padding: 40px;
   justify-content: center;
   align-items: center;
   background-color: darkslateblue;
@@ -140,6 +161,7 @@ h1 {
 
 #frameworks {
   display: flex;
+  padding: 40px;
   justify-content: center;
   align-items: center;
   background-color: darkslateblue;
@@ -147,6 +169,8 @@ h1 {
 
 #envir {
   display: flex;
+  flex-wrap: wrap;
+  padding: 40px;
   justify-content: center;
   align-items: center;
   background-color: darkslateblue;
@@ -154,20 +178,30 @@ h1 {
 
 /* project component */
 
-.project-sec {
+.project-section {
   padding: 40px 40px;
-  background-color: darkslateblue;
-  color: red;
+  background-color: darkorange;
+  color: yellow;
+  border: greenyellow solid 5px;
+}
+
+#project-title {
+  font-size: 50px;
+  text-align: center;
+}
+
+.project-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .repo {
-  background-color: greenyellow;
-  margin: 100px;
+  background-color: black;
+  margin: 40px;
   padding: 40px;
-}
-
-.project-link {
-
+  flex: 0 0 50%;
 }
 
 /* media query elements */
@@ -231,7 +265,8 @@ h1 {
   width: 50px;
   height: 50px;
   background-color: pink;
-  border: black solid 1px;
+  border: plum solid 2px;
+  border-radius: 10px;
   margin: 20px;
 }
 
