--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,10 @@ body {
   background: turquoise;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   word-break: nowrap;
 }
@@ -108,7 +112,8 @@ h1 {
 
 #about-title {
   font-size: 50px;
-  text-align: center;
+  text-align: left;
+  padding: 12px;
 }
 
 .about-content {
@@ -126,6 +131,10 @@ h1 {
   background-color: turquoise;
   color: black;
   border: red solid 5px;
+}
+
+#skill {
+  scroll-margin-top: 100px;
 }
 
 #skill-title {
@@ -185,6 +194,10 @@ h1 {
   border: greenyellow solid 5px;
 }
 
+#project {
+  scroll-margin-top: 100px;
+}
+
 #project-title {
   font-size: 50px;
   text-align: center;
@@ -193,16 +206,77 @@ h1 {
 .project-links {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;  
   flex-wrap: wrap;
+  overflow: hidden; 
+  background-color: red;
+  min-height: 300px; /* i.e. or enough height for all sets */
+}
+
+.project-links .repo a {
+  font-weight: lighter;
+  background-color: black;
+  padding: 12px 60px 12px 60px;
+  border-radius: 8px;
+}
+
+.project-buttons-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.project-buttons {
+  background-color: black;
+  border-radius: 24px;
+  padding: 12px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.project-buttons:hover {
+  background-color: yellow;
+  color: black;
+}
+
+.project-image {
+  border-radius: 8px;
+  min-height: 225px;
+  width: auto;
+  object-fit: cover;
+}
+
+.project-icons {
+  width: 32px;
 }
 
 .repo {
   background-color: black;
-  margin: 40px;
-  padding: 40px;
-  flex: 0 0 50%;
+  border-radius: 8px;
+  margin: 48px;
+  min-width: 250px;
+  max-width: 250px; /* fixed width */
+  text-align: center;
+  border: 4px solid transparent; /* reserves space for the repo hover to avoid the modal shifting slightly */
 }
+
+.repo:hover {
+  border: 4px yellow solid;
+}
+
+.repo-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 24px;
+  margin-bottom: 16px;
+  height: auto;
+  filter: invert(1);
+}
+
+
 
 /* media query elements */
 
