--- a/src/styles.css
+++ b/src/styles.css
@@ -376,6 +376,25 @@ h1 {
 
 }
 
+/* resume component */
+#resume-sec {
+  padding-top: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#resume-download {
+  padding: 15px;
+  margin: 24px;
+  border-radius: 24px;
+}
+
+#resume-sec iframe {
+  margin: 48px;
+}
+
 /* other */
 
 .square {
