--- a/src/styles.css
+++ b/src/styles.css
@@ -121,8 +121,13 @@ h1 {
 
 .about-section {
   color: white;
-  width: 70%;
+  width: 100%;
   margin: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-height: 300px; /* or any fixed height */
 }
 
 #about {
@@ -137,18 +142,23 @@ h1 {
   scroll-margin-top: 100px;
 }
 
-#profile {
-  height: 224px;
-  width: 224px;
-  border: 4px solid greenyellow;
-  margin: 50px 0px 0px 50px;
-  border-radius: 50%;
+#profile-container {
+  background-color: rgba(17,17,82,255);
+  height: 100%;
+  padding: 0px 16px 0px 16px;
+  border: transparent 1px solid;
+  border-radius: 16px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  height: 400px;
 }
 
 .about-content {
   display: flex;
   justify-content: left;
   align-items: center;
+  width: 60%;
 }
 
 .about-text { 
@@ -156,7 +166,7 @@ h1 {
   justify-content: center;
   align-items: left;
   flex-direction: column;
-  margin: 48px 48px 48px 48px;
+  margin: 0px 48px 48px 48px;
 }
 
 .about-text div {
@@ -165,6 +175,11 @@ h1 {
 
 .about-text p {
   margin-bottom: 12px;
+  background-color: bisque;
+  color: black;
+  padding: 16px;
+  border: transparent 1px solid;
+  border-radius: 4px;
 }
 
 .about-content .about-text ul {
@@ -174,6 +189,17 @@ h1 {
 
 .about-content .about-text ul li {
   margin-right: 16px;
+}
+
+.social-icons {
+  padding: 12px;
+  background-color: rgb(37, 150, 190);
+  border: transparent 1px solid;
+  border-radius: 36px;
+}
+
+.social-icons:hover {
+  background-color: rgb(102, 190, 220);
 }
 
 /* skills component */
