--- a/src/styles.css
+++ b/src/styles.css
@@ -407,26 +407,25 @@ h1 {
 
 .contact-sec {
   width: 100%;
-  height: 100px;
-  padding: 16px;
-  background-color: var(--color-primary);
+  padding: 72px;
+  margin-top: 96px;
   display: flex;
+  background-color: var(--color-midnight);
 }
 
 .contact-sec-left {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
   width: 40%;
 }
 
 .contact-sec-right {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  vertical-align: center;
-  justify-content: flex-end;
+  justify-content: center;
   margin-left: auto;
 }
 
@@ -434,6 +433,7 @@ h1 {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   gap: 12px;
 }
 
