--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,6 @@ body {
   overflow: auto;
   font-family: 'Funnel Display', 'M PLUS Rounded 1c', sans-serif;
   font-weight: 500;
-  background: orange;
   overflow-x: hidden;
   color: white;
 }
@@ -378,6 +377,7 @@ h1 {
   justify-content: center;
   align-items: center;
   font-size: 90px;
+  color: rgb(255, 157, 0);
 } 
 
 #heading-small {
