--- a/src/styles/newStyles.css
+++ b/src/styles/newStyles.css
@@ -252,6 +252,7 @@ body {
 #proj-authors {
   color: #818182;
   margin: 0rem 0rem 1rem 0rem;
+  min-height: 48px;
 }
 
 #proj-lg-title {
@@ -392,3 +393,56 @@ body {
 
 }
 
+/* education */
+#edu-container {
+  position: relative;              
+  padding: 2rem 20rem 2rem 6rem;  
+  background-color: var(--color-dark-grey);
+  overflow-y: scroll;
+  max-height: calc(100vh - 3.75rem - 6.5rem);
+  border-radius: 1rem;
+}
+
+.section-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;                    
+  height: 30%;                     
+  min-height: 200px;               
+  background-image: url('src/assets/bg/bg-tokyo.png');
+  background-size: cover;
+  background-position: center;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  z-index: 0;                     
+}
+
+/* ensure content appears above background */
+#edu-container > *:not(.section-bg) {
+  position: relative;
+  z-index: 1;                     
+}
+
+#uni {
+  font-size: 3rem;
+}
+
+#uni-location {
+  font-size: 2rem;
+
+}
+
+#uni-range {
+  font-size: 2rem;
+
+}
+
+#degree {
+  font-size: 2rem;
+
+}
+
+.special {
+  font-size: 1.5rem;
+}
