--- a/src/styles/newStyles.css
+++ b/src/styles/newStyles.css
@@ -39,6 +39,62 @@ body {
   flex-direction: row;
 }
 
+.music-cover {
+  width: 56px;
+  height: 56px;
+  border-radius: 4px;
+}
+
+.music-info {
+  display: flex;
+  flex-direction: row;
+}
+
+.music-text {
+  display: flex;
+  flex-direction: column;
+}
+
+#play-button {
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+}
+
+#next-button {
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+}
+
+.music-info {
+  display: flex;
+  align-items: center;
+}
+
+.music-text {
+  margin-left: 1rem;
+}
+
+.music-title {
+  font-size: 0.9rem;
+}
+
+.music-artist {
+  font-size: 0.8rem;
+  color: grey;
+}
+
+#music-buttons {
+
+}
+
+#play-button, #next-button {
+
+}
+
 /* new top */
 
 #bar {
