--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,9 +4,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap");
 @import "tailwindcss";
-/* @plugin "daisyui"; */
-
-/* IDEA: THE THEME OF WEBSITE SHOULD BE FISHING CATS PIXEL ART */
 
 :root {
   --white-transparent: rgba(255, 255, 255, 0.5);
@@ -14,20 +11,9 @@
   --color-midnight: #06091f;
   --color-navy: #161a31;
   --color-indigo: #1f1e39;
-  --color-storm: #282b4b;
+  --color-dark-grey: #1a1a1a;
+  --color-black: rgb(0, 0, 0);
 }
-
-/* tailwindcss v4 base layer */
-@layer base {
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-  }
-}
-
-/* elements */
 
 body {
   overflow: auto;
@@ -35,7 +21,492 @@ body {
   font-weight: 500;
   overflow-x: hidden;
   color: white;
+  background-color: black;
 }
+
+/* webkit */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+
+/* thumb is controlled by viewport, use max-height */
+::-webkit-scrollbar-thumb { 
+  width: 10px; 
+  height: 4px;
+  background-color: var(--white-transparent);
+  border-radius: 12px;
+}
+
+/* music player */
+
+#music-player {
+  background-color: var(--color-black);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4.5rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.music-cover {
+  width: 56px;
+  height: 56px;
+  border-radius: 4px;
+}
+
+.music-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.music-text {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+
+#play-button {
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+}
+
+#next-button {
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+}
+
+.music-title {
+  font-size: 0.9rem;
+}
+
+.music-artist {
+  font-size: 0.8rem;
+  color: grey;
+}
+
+#music-buttons {
+
+}
+
+#play-button, #next-button {
+
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  
+}
+
+input[type="range"]::-ms-fill-lower {
+  background: #ffae00; /* Blue for the filled part */
+  border-radius: 4px;
+}
+
+input[type="range"]::-ms-fill-upper {
+  background: #ddd; /* Light gray for the unfilled part */
+  border-radius: 4px;
+}
+
+
+/* new top */
+
+#bar {
+  display: flex;
+  align-items: center;
+  height: 3.75rem;
+  background-color: var(--color-black);
+  position: relative;
+}
+
+#contact-btn {
+  margin-left: 1rem;
+  cursor: pointer;
+  background-color: rgb(241, 55, 55);
+  padding: 8px;
+  border-radius: 8px;
+}
+
+.icon-wrapper {
+  padding: 8px;
+  background-color: var(--color-dark-grey);
+  border-radius: 64px;
+  margin: 0rem 0.5rem 0rem 0.5rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.icon-active-wrapper {
+  padding: 8px;
+  background-color: white;
+  border-radius: 64px;
+  margin: 0rem 0.5rem 0rem 0.5rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.icon-wrapper:hover {
+  background-color: #818182;
+}
+
+#home-icon {
+  width: 32px;
+  border: 0.5px solid transparent;
+}
+
+/* new front */
+
+#main {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin: 1rem;
+  max-height: calc(100vh - 4.5rem - 7rem);
+}
+
+#link-list {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-dark-grey);
+  width: 20%;
+  border-radius: 16px;
+  min-width: 374px;
+  overflow-y: auto;
+}
+
+#content-display {
+  width: 80%;
+  /* 100vh - <top_height> - <bottom-height> */
+}
+
+#link-list .link {
+  display: flex;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+#link-list .link:hover {
+  background-color: dimgray;
+  border-radius: 0.5rem;
+}
+
+.active-link {
+  background-color: rgb(47, 46, 46);
+}
+
+#link-list .link-img {
+  width: 64px;
+  height: 64px;
+  border-radius: 12px;
+}
+
+#link-list .link p {
+  margin-left: 1rem;
+}
+
+.link-title {
+  font-size: 1rem;
+}
+
+.link-info {
+  color: #818182;
+  font-size: 0.9rem;
+}
+
+/* about content */
+#about-content {
+  padding: 2rem 8rem 2rem 6rem;
+  background-color: var(--color-dark-grey);
+  overflow-y: scroll;
+  max-height: calc(100vh - 3.75rem - 6.5rem);
+  border-radius: 1rem;
+}
+
+#profile {
+  min-width: 256px;
+  max-height: 256px;
+}
+
+#profession {
+  font-size: 28px;
+  font-weight: 200;
+  color: #818182;
+}
+
+#about-top { 
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  gap: 2rem;
+  align-items: flex-end;
+}
+
+#about-bio { 
+  margin: 2rem 0 2rem 0;
+}
+
+#socials {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 0 1rem 0;
+}
+
+.social-icon {
+  padding: 12px;
+  background-color: rgb(73, 7, 149);
+  border: transparent 1px solid;
+  border-radius: 1rem;
+  margin-right: 0.5rem;
+}
+
+.social-icon:hover {
+  background-color: rgb(135, 2, 165);
+}
+
+/* project */
+
+#proj-container {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+#proj-card-container {
+  background-color: var(--color-dark-grey);
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem;
+  overflow-y: scroll;
+  background-color: var(--color-dark-grey);
+  border-radius: 1rem;
+  max-height: calc(100vh - 3.75rem - 6.5rem);
+}
+
+#proj-info-display {
+  background-color: var(--color-dark-grey);
+  border-radius: 12px;
+  min-width: 300px;
+  max-height: calc(100vh - 3.75rem - 6.5rem);
+  padding: 1.5rem;
+  max-width: 300px;
+  overflow-y: auto;
+  position: relative;
+}
+
+.proj-card {
+  margin: 1rem;
+}
+
+.proj-img {
+  width: 200px;
+  height: auto;
+  border-radius: 12px;
+}
+
+.proj-txt {
+  max-width: 200px;
+}
+
+.proj-title {
+  margin-top: 0.5rem;
+}
+
+.proj-authors {
+  color: #818182;
+}
+
+#proj-authors {
+  color: #818182;
+  margin: 0rem 0rem 1rem 0rem;
+  min-height: 48px;
+}
+
+#proj-lg-title {
+  font-size: x-large;
+  margin: 1rem 0rem 1rem 0rem
+}
+
+#proj-lg-img {
+  border-radius: 0.5rem;
+}
+
+#github-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: black;
+  margin: 0 -1.5rem 0rem -1.5rem;
+  padding: 1.1rem 0rem 1.25rem 0rem;
+  border: 1px solid rgb(38, 36, 36);
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+#github-links img, svg {  
+  width: 28px;
+  height: 28px;
+}
+
+#github-link {
+  /* margin: 0 -2rem -2rem -2rem; */
+}
+
+/* experience */
+#exp-container {
+  padding: 2rem 6rem 2rem 6rem;
+  background-color: var(--color-dark-grey);
+  overflow-y: scroll;
+  max-height: calc(100vh - 3.75rem - 6.5rem);
+  border-radius: 1rem;
+}
+
+.exp-type {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.exp {
+  display: flex;
+  flex-direction: row;
+  margin: 0 0 2.5rem 0;
+}
+
+.exp-img {
+  width: 200px;
+  height: 200px;
+}
+
+.exp-txt {
+  margin-left: 1rem;
+}
+
+.company {
+  font-size: 2rem;
+}
+
+.exp-title {
+  font-size: 1.5rem;
+}
+
+.exp-period {
+  color: grey
+}
+
+.exp-desc {
+  font-weight: 100;
+}
+
+/* home */
+
+#home-sec {
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes pan {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 1000px 1000px;
+  }
+}
+
+#version-container {
+  padding: 2rem 20rem 2rem 6rem;
+  background-color: var(--color-dark-grey);
+  overflow-y: scroll;
+  max-height: calc(100vh - 3.75rem - 6.5rem);
+  border-radius: 1rem;
+}
+
+.version {
+
+}
+
+.version-date {
+
+}
+
+.version-point {
+
+}
+
+/* education */
+#edu-container {
+  position: relative;              
+  padding: 2rem 20rem 2rem 6rem;  
+  background-color: var(--color-dark-grey);
+  overflow-y: scroll;
+  max-height: calc(100vh - 3.75rem - 6.5rem);
+  border-radius: 1rem;
+}
+
+.section-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;                    
+  height: 30%;                     
+  min-height: 200px;               
+  background-image: url('src/assets/bg/bg-tokyo.png');
+  background-size: cover;
+  background-position: center;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  z-index: 0;                     
+}
+
+/* ensure content appears above background */
+#edu-container > *:not(.section-bg) {
+  position: relative;
+  z-index: 1;                     
+}
+
+#uni {
+  font-size: 3rem;
+}
+
+#uni-location {
+  font-size: 2rem;
+
+}
+
+#uni-range {
+  font-size: 2rem;
+
+}
+
+#degree {
+  font-size: 2rem;
+
+}
+
+.special {
+  font-size: 1.5rem;
+}
+
+/* elements */
+
 
 html {
   scroll-behavior: smooth;
@@ -476,14 +947,17 @@ h1 {
 }
 
 #star-container {
+  position: relative;
   background-color: rgb(26, 20, 195);
   padding-top: 250px;
   padding-bottom: 200px;
-  height: 100vh;
+  height: calc(100vh - 4.5rem - 7rem);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 
 #star-pattern {
@@ -502,10 +976,6 @@ h1 {
   will-change: background-position;
   pointer-events: none;
 }
-
-/* mask-image, will-change, animation, transition, pointer-events, opacity, background-position, background-size, repeating-linear-gradient z-index, top, left */
-/* ::after, :hover, ::before */
-/* keyframes, scroll-bars */
 
 @keyframes pan {
   0% {
