--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -46,11 +46,18 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 6rem;
+  height: 5.3rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-self: center;
+  padding: 1rem;
+}
+
+#player-middle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #music-player {
@@ -75,18 +82,17 @@ body {
   margin-left: 1rem;
 }
 
-#play-button {
-  border: 2px solid white;
-  border-radius: 50%;
-  width: 56px;
-  height: 56px;
+#music-buttons {
+  display: flex;
+  flex-direction: row;
 }
 
-#next-button {
+.music-button {
   border: 2px solid white;
   border-radius: 50%;
-  width: 56px;
-  height: 56px;
+  width: 40px;
+  height: 40px;
+  margin: 0 0.5rem 0 0.5rem;
 }
 
 .music-title {
@@ -96,10 +102,6 @@ body {
 .music-artist {
   font-size: 0.8rem;
   color: grey;
-}
-
-#music-buttons {
-
 }
 
 #play-button, #next-button {
