--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -51,17 +51,27 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-self: center;
-  padding: 1rem;
+  padding: 0.9rem;
+  z-index: 100; 
+}
+
+#player-middle, #player-left, #player-right {
+  width: 33.3%
 }
 
 #player-middle {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: green;
 }
 
-#music-player {
+#player-left {
+  background: red;
+}
 
+#player-right {
+  background: blue;
 }
 
 .music-cover {
@@ -88,11 +98,23 @@ body {
 }
 
 .music-button {
-  border: 2px solid white;
   border-radius: 50%;
   width: 40px;
   height: 40px;
   margin: 0 0.5rem 0 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: stroke;
+}
+
+.music-button:hover {
+  cursor: pointer;
+}
+
+#play {
+  padding: 4px;
+  background-color: white;
 }
 
 .music-title {
@@ -102,18 +124,6 @@ body {
 .music-artist {
   font-size: 0.8rem;
   color: grey;
-}
-
-#play-button, #next-button {
-
-}
-
-input[type="range"]::-webkit-slider-runnable-track {
-
-}
-
-input[type="range"]::-webkit-slider-thumb {
-  
 }
 
 input[type="range"]::-ms-fill-lower {
@@ -145,7 +155,7 @@ input[type="range"]::-ms-fill-upper {
   width: 0%;
   height: 5px;
   background-color: white;
-  transition: 2s ease-in;
+  transition: width 0.05s linear;
 }
 
 
@@ -473,15 +483,19 @@ input[type="range"]::-ms-fill-upper {
 }
 
 .version {
-
+  font-size: 2.5rem;
 }
 
 .version-date {
-
+  font-size: 1.5rem;
+  color: grey;
+  margin-bottom: 0.5rem;
 }
 
 .version-point {
-
+  list-style-type: circle;
+  color: rgb(214, 214, 214);
+  margin-left: 4rem;
 }
 
 /* education */
@@ -853,15 +867,6 @@ h1 {
   margin-top: 24px;
   margin-bottom: 16px;
   height: auto;
-}
-
-#play {
-  background-color: rgb(102, 190, 220); 
-  padding: 2px 12px 2px 12px;
-  color: black;
-  border: transparent 1px solid;
-  border-radius: 16px;
-  display: block;
 }
 
 /* media query elements */
