--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,7 +41,7 @@ body {
 /* music player */
 
 #music-section {
-  background-color:#1f1e39;
+  background-color: black;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -51,7 +51,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-self: center;
-  padding: 0.9rem;
+  padding: 0.2rem 0.9rem 0.9rem 0.9rem;
   z-index: 100; 
 }
 
@@ -63,15 +63,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: green;
 }
 
 #player-left {
-  background: red;
 }
 
 #player-right {
-  background: blue;
 }
 
 .music-cover {
@@ -95,12 +92,13 @@ body {
 #music-buttons {
   display: flex;
   flex-direction: row;
+  margin-bottom: 0.4rem;
 }
 
 .music-button {
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
   margin: 0 0.5rem 0 0.5rem;
   display: flex;
   justify-content: center;
@@ -113,7 +111,7 @@ body {
 }
 
 #play {
-  padding: 4px;
+  padding: 7px;
   background-color: white;
 }
 
@@ -123,6 +121,11 @@ body {
 
 .music-artist {
   font-size: 0.8rem;
+  color: grey;
+}
+
+.music-time {
+  font-size:  0.75rem;
   color: grey;
 }
 
@@ -139,6 +142,8 @@ input[type="range"]::-ms-fill-upper {
 #progress-bar {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
 }
 
@@ -153,9 +158,10 @@ input[type="range"]::-ms-fill-upper {
 #bar-fill {
   position: absolute;
   width: 0%;
-  height: 5px;
+  height: 4px;
   background-color: white;
   transition: width 0.05s linear;
+  border-radius: 4px;
 }
 
 
