--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -226,9 +226,9 @@ input[type="range"]::-ms-fill-upper {
   display: flex;
   flex-direction: column;
   background-color: var(--color-dark-grey);
-  width: 20%;
   border-radius: 16px;
-  min-width: 374px;
+  align-items: center;
+  max-width: 374px;
   overflow-y: auto;
 }
 
@@ -273,7 +273,6 @@ input[type="range"]::-ms-fill-upper {
 
 /* about content */
 #about-content {
-  padding: 2rem 8rem 2rem 6rem;
   background-color: var(--color-dark-grey);
   overflow-y: scroll;
   height: calc(100vh - 4.5rem - 7rem);
@@ -292,8 +291,6 @@ input[type="range"]::-ms-fill-upper {
 }
 
 #about-top { 
-  display: flex;
-  flex-direction: row;
   height: auto;
   gap: 2rem;
   align-items: flex-end;
