--- a/src/styles/educ.css
+++ b/src/styles/educ.css
@@ -1,38 +1,72 @@
 /* Education page styles */
 
 #edu-container {
-  position: relative;              
-  padding: 2rem 20rem 2rem 6rem;  
+  padding: 2rem 20rem 2rem 6rem;
   background-color: var(--color-dark-grey);
   overflow-y: scroll;
-  height: calc(100vh - 4.5rem - 7rem);
+  height: calc(100vh - 4.5rem - 5.5rem);
   border-radius: 1rem;
 }
 
-.section-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;                    
-  height: 30%;                     
-  min-height: 200px;               
-  background-image: url('src/assets/bg/bg-tokyo.png');
-  background-size: cover;
-  background-position: center;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  z-index: 0;                     
+#uni-section {
+  margin-bottom: 3rem;
 }
 
-#edu-container > *:not(.section-bg) {
-  position: relative;
-  z-index: 1;                     
+#uni-logo {
+  margin-bottom: 1rem;
 }
 
-#uni { font-size: 3rem; }
-#uni-location { font-size: 2rem; }
-#uni-range { font-size: 2rem; }
-#degree { font-size: 2rem; }
-.special { font-size: 1.5rem; }
+#uni { 
+  font-size: 2.5rem;
+  margin-bottom: 0.5rem;
+}
+
+#uni-location { 
+  font-size: 1.5rem;
+  color: grey;
+  margin-bottom: 0.5rem;
+}
+
+#uni-range { 
+  font-size: 1.5rem;
+  color: grey;
+  margin-bottom: 0.5rem;
+}
+
+#degree { 
+  font-size: 1.5rem;
+  color: grey;
+  margin-bottom: 2rem;
+}
+
+.edu-section-title {
+  font-size: 2.5rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.course-category {
+  margin-bottom: 2rem;
+}
+
+.course-category-title {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+  color: rgb(214, 214, 214);
+}
+
+.course-item {
+  list-style-type: circle;
+  color: rgb(214, 214, 214);
+  margin-left: 2rem;
+  margin-bottom: 0.25rem;
+}
+
+.edu-point {
+  list-style-type: circle;
+  color: rgb(214, 214, 214);
+  margin-left: 4rem;
+  margin-bottom: 0.25rem;
+}
 
 
