--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -4,31 +4,31 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
-  margin: 1rem;
-  max-height: calc(100vh - 4.5rem - 7rem);
+  margin: 0rem 1rem 1rem 1rem;
+  max-height: calc(100vh - 4.5rem - 5.5rem);
 }
 
-#link-list {
+.link-list {
   display: flex;
   flex-direction: column;
   background-color: var(--color-dark-grey);
   border-radius: 16px;
   align-items: center;
-  max-width: 374px;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #content-display {
   width: 80%;
 }
 
-#link-list .link {
+.link-list .link {
   display: flex;
   padding: 1rem;
   border-radius: 0.5rem;
 }
 
-#link-list .link:hover {
+.link-list .link:hover {
   background-color: dimgray;
   border-radius: 0.5rem;
 }
@@ -37,13 +37,14 @@
   background-color: rgb(47, 46, 46);
 }
 
-#link-list .link-img {
+.link-list .link-img {
   width: 64px;
   height: 64px;
   border-radius: 12px;
+  object-fit: cover;
 }
 
-#link-list .link p {
+.link-list .link p {
   margin-left: 1rem;
 }
 
