--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -8,7 +8,7 @@
 
 #proj-card-container {
   background-color: var(--color-dark-grey);
-  display: flex; 
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 2rem;
@@ -16,21 +16,12 @@
   overflow-y: scroll;
   background-color: var(--color-dark-grey);
   border-radius: 1rem;
-  height: calc(100vh - 4.5rem - 7rem);
+  height: calc(100vh - 4.5rem - 5.5rem);
 }
 
-#proj-info-display {
-  background-color: var(--color-dark-grey);
-  border-radius: 12px;
-  min-width: 300px;
-  height: calc(100vh - 4.5rem - 7rem);
-  padding: 1.5rem;
-  max-width: 300px;
-  overflow-y: auto;
-  position: relative;
+.proj-card {
+  margin: 1rem;
 }
-
-.proj-card { margin: 1rem; }
 
 .proj-img {
   width: 200px;
@@ -39,9 +30,19 @@
   border-radius: 12px;
 }
 
-.proj-txt { max-width: 200px; }
-.proj-title { margin-top: 0.5rem; }
-.proj-authors { color: #818182; }
+.proj-txt {
+  max-width: 200px;
+}
+.proj-title {
+  margin-top: 0.5rem;
+}
+.proj-authors {
+  color: #818182;
+}
+
+.proj-info-txt {
+  margin-bottom: 1rem;
+}
 
 #proj-authors {
   color: #818182;
@@ -51,33 +52,57 @@
 
 #proj-lg-title {
   font-size: x-large;
-  margin: 1rem 0rem 1rem 0rem
+  margin: 1rem 0rem 1rem 0rem;
 }
 
 .proj-info-img {
   border-radius: 0.5rem;
-  height: 250px;
+  height: 240px;
   object-fit: cover;
 }
 
-#github-links {
+.proj-info-container {
+  background-color: var(--color-dark-grey);
+  border-radius: 12px;
+  min-width: 280px;
+  height: calc(100vh - 4.5rem - 5.5rem);
+  position: relative;
+}
+
+.proj-column-content {
+  overflow-y: auto;
+  height: calc(100% - 68px);
+  padding: 1.5rem;
+}
+
+.github-links {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
   background-color: black;
-  margin: 0 -1.5rem 0rem -1.5rem;
-  padding: 1.1rem 0rem 1.25rem 0rem;
   border: 1px solid rgb(38, 36, 36);
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
   position: absolute;
-  width: 100%;
   bottom: 0;
+  width: 100%;
+  height: 68px;
+  z-index: 99;
 }
 
-#github-links img, #github-links svg {  
-  width: 28px;
-  height: 28px;
+.github-links img,
+.github-links svg {
+  width: 1.75rem;
+  height: 1.75rem;
 }
 
+.github-link {
+  /* transition: property duration timing-function delay */
+  transform: scale(1.1) rotate(0deg);
+  transition: transform 0.2s ease-in-out;
+}
 
+.github-link:hover {
+  transform: scale(1.3) rotate(15deg);
+}
